# partnerchain-reference-implementation

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: main.yml
demo/: README.md
demo/authorities/: Cargo.toml  README.md
demo/authorities/src/: lib.rs
dev/local-environment/: .env  README.md  docker-compose.yml  setup.sh
dev/local-environment/runtime-values/: MC__FIRST_EPOCH_TIMESTAMP_MILLIS
docker/: README.md  genesis.json
docker/examples/hello_world/: README.md  create_info.json  spend_info.json
docker/examples/one_shot_mp/: README.md  tx_info.json
docker/examples/order_book/: README.md  cancel_info.json  create_info.json  resolve_info.json
docs/: CONTRIBUTING.md  TUTORIAL.md  dev_log.md  project_structure.md  release_procedure.md
docs/changelog/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.0.6.md
docs/dev_logs/: initial_customizations.md  partner_chain_integration.md  use_case_implementation.md
docs/tutorial/: README.md  game_usage.md  node_customization.md  operating_instructions.md  partnerchain_integration.md  troubleshooting.md  use_case_application.md
dolos_queries/: Cargo.toml  README.md
dolos_queries/src/: lib.rs  queries.rs
game/: Cargo.toml  README.md
game/src/: deploy_params.json  game.rs  lib.rs  queries.rs  tests.rs  types.rs
game/src/scripts/: asteria.txt  pellet.txt  spacetime.txt
griffin-core/: Cargo.toml
griffin-core/src/: checks_interface.rs  executive.rs  header.rs  lib.rs  pallas_addresses.rs  pallas_interface.rs  types.rs  utxo_set.rs
griffin-core/src/genesis/: config_builder.rs  mod.rs
griffin-core/src/pallas_applying/: alonzo.rs  babbage.rs  byron.rs  utils.rs
griffin-core/src/pallas_crypto/: memsec.rs
griffin-core/src/pallas_primitives/alonzo/: model.rs
griffin-core/src/pallas_traverse/: assets.rs  block.rs  header.rs  output.rs  tx.rs  witnesses.rs
griffin-core/src/uplc/: ast.rs  flat.rs
griffin-core/src/uplc/hamming/: util.rs
griffin-core/src/uplc/machine/: error.rs
griffin-rpc/: Cargo.toml  README.md
griffin-rpc/src/: cardano_rpc.rs  error.rs  lib.rs  rpc.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: genesis.rs  lib.rs
toolkit/cli/commands/: Cargo.toml
toolkit/cli/commands/src/: key_params.rs  lib.rs  registration_signatures.rs
toolkit/cli/node-commands/src/: lib.rs
toolkit/committee-selection/authority-selection-inherents/src/: ariadne_inherent_data_provider.rs  authority_selection_inputs.rs  filter_invalid_candidates.rs  lib.rs  mock.rs  runtime_api_mock.rs  select_authorities.rs  tests.rs
toolkit/committee-selection/primitives/src/: lib.rs
toolkit/committee-selection/query/src/: commands.rs  get_registrations.rs  lib.rs
toolkit/committee-selection/selection/src/: ariadne.rs  ariadne_v2.rs  tests.rs  weighted_random.rs
toolkit/partner-chains-cli/: Cargo.toml
toolkit/partner-chains-cli/src/: cardano_key.rs  cmd_traits.rs  config.rs  data_source.rs  io.rs  keystore.rs  lib.rs  permissioned_candidates.rs  runtime_bindings.rs  select_utxo.rs
toolkit/partner-chains-cli/src/create_chain_spec/: mod.rs  tests.rs
toolkit/partner-chains-cli/src/deregister/: mod.rs  tests.rs
toolkit/partner-chains-cli/src/generate_keys/: mod.rs  tests.rs
toolkit/partner-chains-cli/src/ogmios/: config.rs  mod.rs
toolkit/partner-chains-cli/src/prepare_configuration/: init_governance.rs  mod.rs  prepare_cardano_params.rs  prepare_main_chain_config.rs  select_genesis_utxo.rs
toolkit/partner-chains-cli/src/register/: mod.rs  register1.rs  register2.rs  register3.rs
toolkit/partner-chains-cli/src/setup_main_chain_state/: mod.rs  tests.rs
toolkit/partner-chains-cli/src/start_node/: mod.rs  tests.rs
toolkit/partner-chains-cli/src/tests/: config.rs  mod.rs  runtime.rs
toolkit/sidechain/domain/: Cargo.toml
toolkit/sidechain/domain/src/: byte_string.rs  cross_chain_app.rs  crypto.rs  lib.rs  mainchain_epoch.rs
toolkit/sidechain/primitives/src/: lib.rs  tests.rs
toolkit/sidechain/sidechain-block-search/src/: binary_search.rs  impl_block_info.rs  impl_compare_strategy.rs  impl_find_block.rs  lib.rs
toolkit/sidechain/sidechain-slots/src/: lib.rs  runtime_api_client.rs
toolkit/smart-contracts/commands/src/: assemble_tx.rs  d_parameter.rs  get_scripts.rs  governance.rs  governed_map.rs  lib.rs  permissioned_candidates.rs  register.rs  sign_tx.rs
toolkit/smart-contracts/offchain/src/: assemble_and_submit_tx.rs  await_tx.rs  cardano_keys.rs  csl.rs  governance.rs  lib.rs  multisig.rs  ogmios_mock.rs  permissioned_candidates.rs  plutus_script.rs  register.rs  scripts_data.rs  sign_tx.rs  test_values.rs
toolkit/smart-contracts/offchain/tests/: integration_tests.rs
toolkit/smart-contracts/plutus-data/src/: bridge.rs  candidate_keys.rs  d_param.rs  governed_map.rs  lib.rs  permissioned_candidates.rs  registered_candidates.rs  reserve.rs  version_oracle.rs
toolkit/utils/byte-string-derivation/src/: lib.rs
toolkit/utils/byte-string-derivation/tests/: array.rs  byte_string.rs  vec.rs
toolkit/utils/ogmios-client/src/: jsonrpsee.rs  lib.rs  query_ledger_state.rs  query_network.rs  transactions.rs  types.rs
toolkit/utils/ogmios-client/tests/: query_ledger_state.rs  query_network.rs  transactions.rs
toolkit/utils/plutus/src/: cbor.rs  lib.rs
toolkit/utils/time-source/src/: lib.rs
wallet/: Cargo.toml  README.md
wallet/src/: cli.rs  command.rs  context.rs  game.rs  keystore.rs  lib.rs  main.rs  order_book.rs  rpc.rs  sync.rs  utils.rs
wallet/src/eutxo_examples/game/: README.md  create_ship.json  gather_fuel.json  mine_asteria.json  move_ship.json
wallet/src/eutxo_examples/hello_world/: create_info.json
wallet/src/eutxo_examples/order_book/: README.md  resolve_info.json
wallet/src/eutxo_examples/vesting/: README.md  create_info.json  spend_info.json
(+29 files in other folders)
