[workspace.package]
license = "Apache-2.0"
authors = ["TxPipe-Shop"]
homepage = "https://github.com/txpipe-shop/partnerchain-reference-implementation"
repository = "https://github.com/txpipe-shop/partnerchain-reference-implementation"
edition = "2021"
version = "0.0.6"

[workspace]
default-members = ["runtime"]
members = [
    "demo/authorities",
    "dolos_queries",
    "game",
    "griffin-core",
    "griffin-rpc",
    "node",
    "runtime",
    "wallet",
    "toolkit/partner-chains-cli",
    "toolkit/cli/commands",
    "toolkit/cli/node-commands",
    "toolkit/committee-selection/authority-selection-inherents",
    "toolkit/committee-selection/primitives",
    "toolkit/committee-selection/query",
    "toolkit/committee-selection/selection",
    "toolkit/smart-contracts/commands",
    "toolkit/smart-contracts/offchain",
    "toolkit/smart-contracts/plutus-data",
    "toolkit/sidechain/domain",
    "toolkit/sidechain/primitives",
    "toolkit/sidechain/sidechain-block-search",
    "toolkit/sidechain/sidechain-slots",
    "toolkit/utils/byte-string-derivation",
	"toolkit/utils/ogmios-client",
	"toolkit/utils/plutus",
	"toolkit/utils/plutus/plutus-datum-derive",
	"toolkit/utils/time-source",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
derivable_impls = { level = "allow", priority = 2 }                  # false positives
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }                         # stylistic
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
useless_conversion = { level = "allow", priority = 2 }               # Types may change
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000

[workspace.dependencies]
griffin-core = { default-features = false, path = "griffin-core" }
griffin-partner-chains-runtime = { path = "./runtime", default-features = false }
griffin-rpc = { default-features = false, path = "griffin-rpc" }
gpc-wallet = { default-features = false, path = "wallet" }
game = { default-features = false, path = "game" }
dolos_queries = { default-features = false, path = "dolos_queries" }
blockfrost = { version = "1.1.0" }
clap = { version = "4.5.13" }
derive-new = { version = "0.7.0" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
hex-literal = "1.0.0"
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
reqwest = { version = "0.12.12" }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.209", default-features = false, features = [
	"derive",
	"alloc",
] }
serde_json = { version = "1.0.132", default-features = false, features = [
	"alloc",
] }
thiserror = { version = "2.0", default-features = false }
crunchy = { version = "0.2.4", default-features = false }

# substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
polkadot-sdk-frame = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-basic-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-consensus-manual-seal = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-executor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-service = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-telemetry = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sc-transaction-pool-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2", default-features = false }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
substrate-build-script-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }

# griffin deps
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2", default-features = false }

# demo implementations
demo-authorities = { path = "demo/authorities", default-features = false }

# Partner chain dependencies
sp-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2" }
anyhow = "1.0.81"
async-trait = "0.1"
bech32 = { version = "0.11.0", default-features = false }
blake2b_simd = { version = "1.0.2", default-features = false }
cardano-serialization-lib = { default-features = false, version = "14.1.2" }
cbor_event = { version = "2.4.0" }
colored = { version = "3.0.0" }
derive_more = { version = "2.0.1", default-features = false }
derive-where = { version = "1.2.7", default-features = false }
ed25519-zebra = { version = "4.0.3" }
envy = { version = "0.4.2" }
figment = { version = "0.10.19", features = ["env", "test"] }
fraction = { version = "0.15.3", default-features = false }
inquire = { version = "0.7.5" }
itertools = "0.14.0"
k256 = { version = "0.13.4", default-features = false }
libp2p-identity = "0.2"
log4rs = { version = "1.3.0" }
minicbor = { version = "0.25.1", features = ["alloc"] }
num-bigint = { version = "0.4.3", default-features = false }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.17", default-features = false }
pallas-primitives = { version = "0.32.1" }
pretty_assertions = { version = "1.4.1" }
proptest = { version = "1.7.0" }
quickcheck = { version = "1.0.3" }
quickcheck_macros = { version = "1" }
quote = "1.0"
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
secp256k1 = { version = "0.30.0", default-features = false }
syn = "2.0"
tempfile = "3.10.1"
testcontainers = { version = "0.25.0" }
time = { version = "0.3.36", default-features = false }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
tokio-retry = { version = "0.3" }
uplc = { version = "1.1.6" }
once_cell = { version = "1.21.3", default-features = false }
assert_cmd = "2.0.14"

raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", tag = "v8.1.0" }

# Local partner chain's dependencies

# cli
partner-chains-cli = { path = "toolkit/partner-chains-cli", default-features = false }
cli-commands = { path = "toolkit/cli/commands" }
partner-chains-node-commands = { path = "toolkit/cli/node-commands" }

# committee selection
authority-selection-inherents = { path = "toolkit/committee-selection/authority-selection-inherents", default-features = false }
selection = { path = "toolkit/committee-selection/selection", default-features = false }
sp-session-validator-management = { path = "toolkit/committee-selection/primitives", default-features = false }
sp-session-validator-management-query = { path = "toolkit/committee-selection/query", default-features = false }

# sidechain
sidechain-block-search = { path = "toolkit/sidechain/sidechain-block-search", default-features = false }
sidechain-domain = { path = "toolkit/sidechain/domain", default-features = false }
sidechain-slots = { path = "toolkit/sidechain/sidechain-slots", default-features = false }
sp-sidechain = { path = "toolkit/sidechain/primitives", default-features = false }

# smart contracts
partner-chains-smart-contracts-commands = { default-features = false, path = "toolkit/smart-contracts/commands"}
partner-chains-cardano-offchain = { default-features = false, path = "toolkit/smart-contracts/offchain"}
partner-chains-plutus-data = { default-features = false, path = "toolkit/smart-contracts/plutus-data"}

# utils
db-sync-sqlx = { path = "toolkit/utils/db-sync-sqlx" }
byte-string-derive = { default-features = false, path = "toolkit/utils/byte-string-derivation" }
ogmios-client = { path = "toolkit/utils/ogmios-client", default-features = false }
plutus = { path = "toolkit/utils/plutus", default-features = false }
plutus-datum-derive = { default-features = false, path = "toolkit/utils/plutus/plutus-datum-derive" }
time-source = { path = "toolkit/utils/time-source" }


[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

