[package]
name = "game"
description = "Game implementation"
version = "0.1.0"
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { features = ["derive"], workspace = true }
colored = { workspace = true }
griffin-core = { workspace = true }
gpc-wallet = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
sc-cli = { workspace = true }
sc-keystore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34.7"
sp-core ={ workspace = true }
sp-runtime ={ workspace = true }
