[package]
name = "griffin-rpc"
description = "Griffin UTxORPC."
version = "0.0.1"
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { version = "0.1.73", optional = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-runtime = { workspace = true, features = ['std'] }
sp-api = { workspace = true, features = ['std'] }
sp-core = { workspace = true, features = ['std'] }
sp-blockchain = { workspace = true }
griffin-core = { workspace = true }
parity-scale-codec = { workspace = true }
parity-util-mem = { version = "0.12.0", optional = true }
scale-info = { features = ["derive"], workspace = true }
derive-new = { workspace = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { workspace = true, features = ["alloc"], optional = true, default-features = false }

[features]
default = ["std"]
std = [
    "serde",
]