[package]
name = "minimal-template-node"
description = "A minimal Substrate-based Substrate node, ready for hacking."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], workspace = true }
docify = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
minimal-template-runtime.workspace = true
polkadot-sdk = { workspace = true, features = [
	"sc-basic-authorship",
	"sc-cli",
	"sc-client-api",
	"sc-consensus",
	"sc-consensus-manual-seal",
	"sc-executor",
	"sc-network",
	"sc-service",
	"sc-offchain",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	"sp-blockchain",
	"substrate-frame-rpc-system",
] }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"minimal-template-runtime/std",
	"polkadot-sdk/std",
]
