[package]
name = "griffin-partner-chains-node"
description = "A solochain node built with Substrate, part of Polkadot SDK"
version = "0.0.5"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
publish = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], workspace = true }
docify = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
griffin-core = { workspace = true }
griffin-partner-chains-runtime = { workspace = true }
griffin-rpc = { workspace = true }
griffin-wallet = { workspace = true }
game = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
serde_json = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { workspace = true }
sp-runtime = { workspace = true }
tokio = { workspace = true }

partner-chains-node-commands = { workspace = true }
partner-chains-cli = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"griffin-partner-chains-runtime/std",
]