[package]
name = "minimal-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.1"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
demo-authorities = { workspace = true }
griffin-core = { workspace = true }
polkadot-sdk = { workspace = true, features = ["pallet-balances", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "runtime"] }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"griffin-core/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
]
