[package]
name = "griffin-partner-chains-runtime"
description = "A solochain runtime built with Substrate, part of Polkadot SDK"
version = "0.0.2"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
demo-authorities = { workspace = true }
griffin-core = { workspace = true }
parity-scale-codec = { features = ["derive"], workspace = true }
polkadot-sdk-frame = { features = ["runtime"], workspace = true }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

serde = { workspace = true }
sp-std = { workspace = true, default-features = false }
sidechain-domain = { workspace = true, features = ["serde"] }
authority-selection-inherents = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"authority-selection-inherents/std",
	"griffin-core/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
	"serde_json/std",
	"sidechain-domain/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"substrate-wasm-builder",
]
